src/Input/index.scss
.nds-input {
  display: flex;
  flex-flow: column nowrap;
  justify-content: flex-start;
  align-items: center;
  font-size: 16px;

  .nds-input-box {
    box-sizing: border-box;
    border: 1px solid RGB(var(--nds-lightest-grey));
    background: RGB(var(--nds-white));
    position: relative;
    width: 100%;
    padding: 7px 0.8em;
    border-radius: 4px;
    display: flex;
    align-items: center;

    &:focus-within {
      border: 1px solid RGB(var(--nds-primary-color));

      label {
        color: RGB(var(--nds-primary-color));
        margin-bottom: -4px;
      }
    }
  }

  .nds-input-column {
    display: flex;
    flex-direction: column-reverse;
    flex-grow: 1;
  }

  &.disabled .nds-input-box {
    pointer-events: none;
    background-color: RGB(var(--nds-smoke-grey));

    input {
      color: RGB(var(--nds-medium-grey));
    }
  }

  &.error {
    .nds-input-box {
      border: 1px solid RGB(var(--nds-red));
    }

    label {
      color: RGB(var(--nds-red));
    }
  }

  &.search .nds-input-box {
    padding: 3px 0.8em;
  }

  .nds-input-icon {
    display: flex;
    font-size: 1.25em;
    padding: 0 0.3em 0 0;
    opacity: 0.5;
  }

  label {
    background: transparent;
    pointer-events: none;
    font-family: var(--nds-font-family);
    font-weight: 400;
    font-size: 12px;
    color: RGB(var(--nds-medium-grey));
    line-height: 1.4;
    white-space: nowrap;
    overflow: hidden;
    margin-bottom: -3px;
  }

  .nds-input-error {
    font-size: 12px;
    font-weight: 400;
    color: RGB(var(--nds-red));
    width: 100%;
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    margin: 0.33em 0 0;

    svg {
      margin: -0.1em 0.4em 0 0.2em;
      height: 1.2em;
      width: 1.2em;
    }
  }

  input,
  textarea {
    color: RGB(var(--nds-grey));
    line-height: normal;
    font-weight: 400;
  }

  textarea {
    line-height: 1.2;
    vertical-align: middle;
    color: var(--nds-grey-text);
    font-family: var(--nds-font-family);
    border: none;
    outline: 0;
    padding: 0;
    width: 100%;
    overflow: hidden;
    resize: none;
  }

  input[type="text"],
  input[type="tel"],
  input[type="number"],
  input[type="email"],
  input[type="date"],
  input[type="password"],
  input[type="search"] {
    border: none;
    outline: 0;
    letter-spacing: 0;
    vertical-align: middle;
    font-family: var(--nds-font-family);
    padding: 0;
    width: 100%;
    font-size: 16px;
  }

  input[type="text"]:placeholder-shown,
  input[type="tel"]:placeholder-shown,
  input[type="number"]:placeholder-shown,
  input[type="email"]:placeholder-shown,
  input[type="search"]:placeholder-shown,
  input[type="password"]:placeholder-shown,
  .no-label input[type="text"],
  .no-label input[type="tel"],
  .no-label input[type="number"],
  .no-label input[type="email"],
  .no-label input[type="date"],
  .no-label input[type="password"],
  .no-label input[type="search"] {
    padding: 6px 0;
    font-size: 16px;

    ~ label {
      display: none;
    }
  }

  input,
  textarea {
    &::placeholder {
      color: var(--nds-medium-grey);
      font-weight: 400;
    }
  }
}

